# maya-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  dev-requirements.txt  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: tests.yaml
docs/: conf.py  index.rst
scripts/: run_tests.py  utilities.py
src/maya_tools/: __init__.py  _internal.py  api.py  attribute.py  blendshape.py  cleanup.py  cluster.py  color.py  connection.py  constraint.py  container.py  curve.py  deformer.py  eval.py  hierarchy.py  history.py  io.py  joint.py  mesh.py  name.py  nodeeditor.py  offset.py  performance.py  placement.py  plugin.py  reference.py  search.py  selection.py  shape.py  skincluster.py  ui.py  visibility.py  wrap.py
src/maya_tools/ui/: node_editor.py  window.py
tests/: conftest.py  test_attribute.py  test_hierarchy.py  test_name.py
