[bdist_wheel]
universal = 1

[metadata]
name = maya-tools
version= attr: maya_tools.__version__
long_description = file: README.md
url = https://github.com/lixaft/maya-tools
author = Fabien Taxil
author_email = fabien.taxil@gmail.com
licence = MIT
licence_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages=find:

[options.packages.find]
where=src

[tool:pytest]
doctest_optionflags =
    IGNORE_EXCEPTION_DETAIL
    ALLOW_UNICODE
    ELLIPSIS
